--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,17 @@
-MONGO_URI=
-JWT_SECRET=
-PORT=5000
+PORT=5001
+
+# PostgreSQL connection string (either POSTGRES_URL or DATABASE_URL is used)
+POSTGRES_URL=postgresql://<user>:<password>@localhost:5432/ngo_connect
+DATABASE_URL=postgresql://<user>:<password>@localhost:5432/ngo_connect
+
+JWT_SECRET=<strong-secret>
+
+# Optional: Gemini AI integration
 GEMINI_API_KEY=
+
+# Payment gateway provider: mock | razorpay
+PAYMENT_GATEWAY_PROVIDER=mock
+
+# Optional Razorpay credentials:
+# RAZORPAY_KEY_ID=
+# RAZORPAY_KEY_SECRET=
